--- a/main.css
+++ b/main.css
@@ -9,14 +9,15 @@ body {
     display: grid;
     grid-template-columns: 10% auto;
     padding-left: 30%;
-    color: rgb(94, 95, 95);
+    color: rgb(39, 27, 43);
 }
 ul {
     list-style-type: none;
-    background-color: #C2EBEF;
+    background-color: rgb(126, 111, 167);
    margin-top: 0;
     padding: 2px;
-    
+    margin-right: 10%;
+    margin-left: 10%;
     border-style: solid;
     border-color:  rgb(137, 138, 138);
 
@@ -31,16 +32,16 @@ ul {
 }*/
 .navbar {
     overflow: hidden;
-    background-color: #C2EBEF;
+    background-color: rgb(218, 215, 236);
   }
   
   .navbar a {
-    float: right;
+    float: left;
     font-size: 1.4rem;
     color: rgb(89, 90, 90);
     padding: 16px;
     text-decoration: none;
-    margin-right: 10%;
+    margin-left: 29%;
 
   }
   
@@ -78,8 +79,9 @@ ul {
     padding: 3px;
     text-decoration: none;
     display: block;
-    text-align: left;
-    font-size: 1.2rem;
+    text-align: center;
+    font-size: 1rem;
+    margin-left: 0;
   }
   
   .dropdown-content a:hover {
@@ -92,11 +94,19 @@ ul {
 
 
 h2 {
-    padding-left: 15%;
-    color: rgb(80, 88, 88);
+    
+    color: rgb(56, 47, 59);
+    background-color: rgb(206, 206, 211);
+    width:15%;
+    margin-left: 15%;
+    text-align: center;
+    padding: 1px 1px;
+    border-radius: 10px;
+    border-style: solid;
+    border-color:  rgb(99, 100, 100);
 }
 .news {
-    background-color: #C2EBEF;
+    background-color: rgb(218, 215, 236);
     width: 70%;
     display: grid;
     grid-template-columns: 37% 35% 21%;
@@ -111,7 +121,7 @@ float: right;
 font-size: 1.3rem;
 border-radius: 16px;
 padding: 3px 15px 3px 15px;
-background-color: #6CEADC;
+background-color: rgb(218, 215, 236);
 margin: 1% 13% 1% 0%;
 
 }
@@ -125,10 +135,10 @@ input[type=submit]:active{
 }
 
 .hours{
-    background-color: #C2EBEF;
+    background-color: rgb(218, 215, 236);
     width:70%;
     margin-left: 15%;
-    color: rgb(143, 145, 145);
+    color: rgb(47, 47, 48);
     padding: 15px 10px 15px 10px;
     border-radius: 10px;
     border-style: solid;
@@ -147,10 +157,10 @@ input[type=date]{
     padding: 5px;
 }
 .contact{
-    background-color:#C2EBEF;
+    background-color:rgb(218, 215, 236);
     width:70%;
     margin-left: 15%;
-    color: rgb(143, 145, 145);
+    color: rgb(47, 47, 48);
     padding: 15px 10px 15px 10px;
     border-radius: 10px;
     border-style: solid;
@@ -170,8 +180,8 @@ textarea {
     margin-bottom: 12%;
 }
 .newsletter{
-    background-color: #C2EBEF;
-    color: rgb(143, 145, 145);
+    background-color: rgb(218, 215, 236);
+    color: rgb(47, 47, 48);
     border-radius: 10px;
     border-style: solid;
     border-color:  rgb(137, 138, 138);
@@ -193,9 +203,13 @@ textarea {
 .socialmedia{
     
     color: rgb(8, 8, 247);
+    background-color: rgb(218, 215, 236);
     padding: 0px 20px 0px 20px;
     font-size: 1rem;
     text-align: center;
+    border-radius: 10px;
+    border-style: solid;
+    border-color:  rgb(137, 138, 138);
 }
 .socialmedia h3{
     margin-top: 10%;
@@ -207,7 +221,7 @@ button{
 float: right;
 font-size: .6rem;
 border-radius: 16px;
-background-color: #6CEADC;
+background-color: rgb(218, 215, 236);
 margin: 1%;
 
 }
@@ -241,7 +255,8 @@ button:active{
 }
 
 .newslist h3 {
-    color : #00416D;
+    color : rgb(2, 53, 104);
+   
 }
 
 .newslist p {
