--- a/main.css
+++ b/main.css
@@ -221,7 +221,7 @@ button{
 float: right;
 font-size: .6rem;
 border-radius: 16px;
-background-color: rgb(218, 215, 236);
+background-color: rgb(247, 225, 247);
 margin: 1%;
 
 }
@@ -237,7 +237,7 @@ button:active{
 /* this is link to the volunteer thank you page */
 .volunteer{
     width:60%;
-    background-color: #C2EBEF;
+    background-color: rgb(247, 225, 247);
     color: rgb(118, 119, 119);
     text-align: center;
     margin-left: 18%;
@@ -268,7 +268,7 @@ button:active{
     margin-top: 2%;
 }
 .newslist {
-    background: #C2EBEF 0% 0% no-repeat padding-box;
+    background: rgb(247, 225, 247) 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #00000029;
     border: 3px solid rgb(137, 138, 138);
     border-radius: 20px;
